--- a/app/profile.html
+++ b/app/profile.html
@@ -51,7 +51,7 @@
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
-        <span class="btn-catalog__text">Katalog</span>
+        <span class="btn-catalog__text">Katalog A-Z</span>
       </a>
       <div class="collapse" id="collapseExample">
         <ul class="submenu">
@@ -230,7 +230,7 @@
                     <svg class="svg-icon">
                       <use xlink:href="img/sprite.svg#burger"></use>
                     </svg>
-                    <span class="btn-catalog__text">Katalog</span>
+                    <span class="btn-catalog__text">Katalog A-Z</span>
                   </a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
@@ -756,7 +756,7 @@
                   </svg>
                   <span>Merken |</span>
                 </a>
-                <a href="#" class="profile-info__links">
+                <a href="#" class="profile-info__links" data-toggle="modal" data-target="#contactModal">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#mail"></use>
                   </svg>
@@ -811,7 +811,7 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img src="img/public1.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public1.jpeg"
                                                                                                  alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -831,7 +831,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img src="img/public5.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public5.jpeg"
                                                                                                   alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -851,7 +851,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img src="img/public9.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public9.jpeg"
                                                                                                   alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -873,7 +873,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public13.jpeg" data-fancybox="image4" class="publication-box__max"><img
+              <a href="publication.html" class="publication-box__max"><img
                   src="img/public12.jpeg"
                   alt=""></a>
               <div class="row">
@@ -897,7 +897,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img src="img/public1.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public1.jpeg"
                                                                                                  alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -917,7 +917,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img src="img/public5.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public5.jpeg"
                                                                                                   alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -937,7 +937,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img src="img/public9.jpeg"
+              <a href="publication.html" class="publication-box__max"><img src="img/public9.jpeg"
                                                                                                   alt=""></a>
               <div class="row">
                 <div class="col-4">
@@ -959,7 +959,7 @@
           </div>
           <div class="col-12 col-sm-6 col-lg-3 publication-col">
             <div class="publication-box">
-              <a href="img/public13.jpeg" data-fancybox="image4" class="publication-box__max"><img
+              <a href="publication.html" class="publication-box__max"><img
                   src="img/public12.jpeg"
                   alt=""></a>
               <div class="row">
@@ -1220,13 +1220,22 @@
           <div class="col-12 d-flex align-items-center flex-wrap">
             <a href="index.html" class="logo">fairmaster.de</a>
 
-            <ul class="list-payment">
-              <li><a href="#"><img src="img/pay1.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay2.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay3.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay4.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay5.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay6.png" alt=""></a></li>
+            <ul class="list-social">
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#instagram"></use>
+                </svg>
+              </a></li>
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#twitter"></use>
+                </svg>
+              </a></li>
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#fb"></use>
+                </svg>
+              </a></li>
             </ul>
           </div>
         </div>
@@ -1243,6 +1252,54 @@
     </div>
   </footer>
 </div>
+
+<!-- Модальное окно -->
+<div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        </button>
+        <form method="post" class="form form-modal">
+          <div class="row">
+            <div class="col-12">
+              <label>
+                <span class="input-title">Nachricht an {придлогатель} senden</span>
+                <textarea name="message" placeholder="Ihre Nachright"></textarea>
+              </label>
+            </div>
+            <div class="col-12">
+              <label>
+                <span class="input-title">Ihre Kontaktdaten</span>
+                <input type="text" name="name" required placeholder="Name*">
+              </label>
+            </div>
+            <div class="col-12 col-sm-6">
+              <label>
+                <span class="input-title">E-Mail-Addresse*</span>
+                <input type="text" name="mail" required placeholder="E-Mail-Addresse*">
+              </label>
+            </div>
+            <div class="col-12 col-sm-6">
+              <label>
+                <span class="input-title">Telefon</span>
+                <input type="text" name="phone" placeholder="Telefon">
+              </label>
+            </div>
+
+            <div class="col-12">
+              <button type="submit" class="btn btn-accent">Nachricht absenden</button>
+
+              <div class="consent">Es gilt ansere <a href="#" class="color-accent">Datenschutzerklarung</a></div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 
 <script src="js/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
