--- a/app/user.html
+++ b/app/user.html
@@ -51,7 +51,7 @@
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
-        <span class="btn-catalog__text">Katalog</span>
+        <span class="btn-catalog__text">Katalog A-Z</span>
       </a>
       <div class="collapse" id="collapseExample">
         <ul class="submenu">
@@ -230,7 +230,7 @@
                     <svg class="svg-icon">
                       <use xlink:href="img/sprite.svg#burger"></use>
                     </svg>
-                    <span class="btn-catalog__text">Katalog</span>
+                    <span class="btn-catalog__text">Katalog A-Z</span>
                   </a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
@@ -1073,13 +1073,22 @@
           <div class="col-12 d-flex align-items-center flex-wrap">
             <a href="index.html" class="logo">fairmaster.de</a>
 
-            <ul class="list-payment">
-              <li><a href="#"><img src="img/pay1.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay2.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay3.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay4.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay5.png" alt=""></a></li>
-              <li><a href="#"><img src="img/pay6.png" alt=""></a></li>
+            <ul class="list-social">
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#instagram"></use>
+                </svg>
+              </a></li>
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#twitter"></use>
+                </svg>
+              </a></li>
+              <li><a href="#">
+                <svg class="svg-icon">
+                  <use xlink:href="img/sprite.svg#fb"></use>
+                </svg>
+              </a></li>
             </ul>
           </div>
         </div>
