--- a/app/manage-account.html
+++ b/app/manage-account.html
@@ -691,7 +691,7 @@
               <div class="col-12 col-md-6 col-lg-4">
                 <form method="post" class="form form-user form-contacts">
                   <h3>Passwort ändern</h3>
-                  <label><input type="text" placeholder="Altes Passwort" name="name"></label>
+                  <label><input type="password" placeholder="Altes Passwort" name="name"></label>
                   <label><input type="text" placeholder="Neues Passwort" name="password"></label>
                   <label><input type="text" placeholder="Neues Passwort Wiederholen" name="double_password"></label>
                   <button type="submit" class="btn btn-accent">Speichern</button>
