--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 d-flex align-items-center flex-wrap">
-              <p>Benutzer: 123 | Anbieter: 312 | Ausstellungen: 455</p>
+              <p>Benutzer: 13 | Anbieter: 5 | Ausstellungen: 14</p>
               <div class="contact-item">Kontakt: info@fairmaster.de</div>
             </div>
           </div>
@@ -197,9 +197,9 @@
               <a href="index.html" class="logo">fairmaster.de</a>
               <form method="post" class="form-search">
                 <label>
-                  <input type="text" placeholder="Suche....." name="search">
+                  <input type="text" class="form-control" placeholder="Suche....." name="search">
                 </label>
-                <button type="submit" class="btn">
+                <button type="submit" class="btn btn-primary">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#search"></use>
                   </svg>
@@ -207,7 +207,7 @@
               </form>
 
               <div class="header-box">
-                <a href="user.html" class="header-box__links">Login</a>
+                <a href="user.html" class="header-box__links">Anmelden</a>
                 <a href="#" class="header-box__links">Registrieren</a>
               </div>
 
@@ -399,8 +399,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Handwerker &<br>
-                  Meister</a>
+                <li class="dropdown-item-menu"><a href="#">Handwerker & <br>Gewerbebetriebe</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -464,8 +463,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Kunstler &<br>
-                  Sammlerstücke</a>
+                <li class="dropdown-item-menu"><a href="#">Freiberufler & <br>Dienstleister</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -529,8 +527,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Dienstleister &<br>
-                  Freiberufler</a>
+                <li class="dropdown-item-menu"><a href="#">Künstler & <br>Designer</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -594,8 +591,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Meisterklasse & <br>
-                  Kreativbedarf</a>
+                <li class="dropdown-item-menu"><a href="#">Kreativbedarf & <br>Sammlerbörse</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -675,13 +671,13 @@
           <div class="col-12">
             <div class="home-slider w-100">
               <div class="slide">
-                <div class="home-slider__item"><img src="img/banner1.jpg" alt=""></div>
+                <div class="home-slider__item"><img src="img/sitebanner1.png" alt=""></div>
               </div>
               <div class="slide">
-                <div class="home-slider__item"><img src="img/banner2.jpg" alt=""></div>
+                <div class="home-slider__item"><img src="img/sitebanner2.png" alt=""></div>
               </div>
               <div class="slide">
-                <div class="home-slider__item"><img src="img/banner3.jpg" alt=""></div>
+                <div class="home-slider__item"><img src="img/sitebanner3.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -1118,7 +1114,7 @@
 
               <form method="post" class="form-subscribe">
                 <label>
-                  <input type="text" placeholder="E-Mail Adresse..." name="mail">
+                  <input type="text" class="form-control" placeholder="E-Mail Adresse..." name="mail">
                 </label>
                 <button type="submit" class="btn">Los!</button>
               </form>
